added cache result

--- a/simulation_results/cache_comparison/10MB/cache_10MB_10_min_100/omnetpp-promote-spraywait_cache_10MB.ini
+++ b/simulation_results/cache_comparison/10MB/cache_10MB_10_min_100/omnetpp-promote-spraywait_cache_10MB.ini
@@ -24,7 +24,7 @@ eventlog-file = ${resultdir}/${runid}-log1.txt
 # simtime-resolution = s (default ps)
 #sim-time-limit = 2071530s
 #7days 604800
-sim-time-limit =432000s
+sim-time-limit =345600s
 
 repeat = 1
 
@@ -49,14 +49,16 @@ seed-3-mt = 128
 # network parameters
 **.numNodes = 500
 
-
+#17500  : 35 s
+#7500 : 15 s
+#300000: 10 minute
 
 # application layer (promote)
 #**.notificationGenDistribution = 1 # constant generations every notificationGenInterval interval
 #**.promote.notificationGenStartMaxTime = 3600s
 #**.promote.notificationGenInterval = 7200s
 **.promote.notificationGenStartMaxTime =200s
-**.promote.notificationGenInterval =360000s
+**.promote.notificationGenInterval =300000s
 **.promote.notificationGenDistribution =1
 **.promote.notificationValidDuration = 472800s
 **.promote.dataPayloadSizeInBytes = 9974
@@ -67,11 +69,14 @@ seed-3-mt = 128
 
 
 # forwarding layer parameters
-**.forwardingLayer = "KEpidemicRoutingLayer"
-**.0maximumCacheSize = 1000000000byte # 1 GB cache
-**.destinationOrientedData = false
+**.forwardingLayer = "KSpraywaitRoutingLayer"
+**.maximumCacheSize = 10000000byte # 1 GB cache=1000000000byte
+**.destinationOrientedData = true
+**.spraywaitFlavour="binary"    #binary,vanila and source are the value
+**.disableExcesslog=true
 **.antiEntropyInterval = 300s
 **.maximumHopCount = 100
+**.noDuplicate=100
 
 
 
